Add coverage test for ObjectStreamClassInstantiator